--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					<div class="desc-bride">
 						<h3>Ni Komang Dewi Ratnasari,S.Keb</h3>
 						<p>Putri Bungsu dari pasangan Bpk <strong>I Ketut Suardhana (alm) </strong> dan Ibu <strong>Ni Luh Wangi </strong>
-							Siakin, Kintamani</p>
+							Surakarma, Kintamani</p>
 					</div>
 				</div>
 			</div>
