--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.jpg); "> 
 						<a href="images/1.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -371,7 +371,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.jpg); "> 
 						<a href="images/2.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -381,7 +381,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/12.jpg); "> 
 						<a href="images/3.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -391,7 +391,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.jpg); "> 
 						<a href="images/3.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -400,7 +400,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.jpg); "> 
 						<a href="images/5.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -409,7 +409,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.jpg); "> 
 						<a href="images/6.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -418,7 +418,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.jpg); "> 
 						<a href="images/7.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -426,7 +426,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.jpg); "> 
 						<a href="images/8.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -434,7 +434,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.jpg); "> 
 						<a href="images/9.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -442,7 +442,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/10.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/10.jpg); "> 
 						<a href="images/10.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -450,7 +450,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/11.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/11.jpg); "> 
 						<a href="images/11.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
