--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
 
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/12.jpg); "> 
-						<a href="images/3.jpeg" class="color-5">
+						<a href="images/12.jpg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
 								<h2></h2>
