--- a/index.html
+++ b/index.html
@@ -458,6 +458,15 @@
 							</div>
 						</a>
 					</li>
+					</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/15.jpg); "> 
+						<a href="images/15.jpeg" class="color-5">
+							<div class="case-studies-summary">
+								<span></span>
+								<h2></h2>
+							</div>
+						</a>
+					</li>
 				</ul>		
 			</div>
 				</div>
