--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash; Agung Parisata & Dewi Ratna </title>
+	<title>Wedding &mdash; Agung Parista & Dewi Ratna </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content=" Agung Parisata & Dewi Ratna" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
