--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Wedding &mdash; Agung Parista & Dewi Ratna </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content=" Agung Parisata & Dewi Ratna" />
+	<meta name="description" content=" Agung Parista & Dewi Ratna" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
