--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash; Agung Parista & Dewi Ratna </title>
+	<title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content=" Agung Parista & Dewi Ratna" />
+	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
@@ -73,8 +73,8 @@
 	<![endif]-->
 
 	</head>
-	<body>
-			<div class="navbar navbar-default navbar-fixed-top">
+	<body>		
+		<div class="navbar navbar-default navbar-fixed-top">
 			<!----------------HEADER------------------------------>
 			  <div class="navbar-header navbar-brand header">
 				  
@@ -107,6 +107,7 @@
 			</div>  
 		</div>
 	  
+	</div>
 	<div class="fh5co-loader"></div>
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
@@ -115,12 +116,13 @@
 				<div class="col-xs-2">
 					<div id="fh5co-logo"><a href="index.html">Pawiwahan<strong>.</strong></a></div>
 				</div>
+				
 			</div>
 			
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bener-back.jpeg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bener.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -186,7 +188,7 @@
 					<div class="desc-bride">
 						<h3>Ni Komang Dewi Ratnasari,S.Keb</h3>
 						<p>Putri Bungsu dari pasangan Bpk <strong>I Ketut Suardhana (alm) </strong> dan Ibu <strong>Ni Luh Wangi </strong>
-							Br. Surakarma, Kintamani</p>
+							Siakin, Kintamani</p>
 					</div>
 				</div>
 			</div>
@@ -394,7 +396,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.jpeg); "> 
 						<a href="images/1.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -404,7 +406,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.jpeg); "> 
 						<a href="images/2.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -414,17 +416,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/12.jpg); "> 
-						<a href="images/12.jpg" class="color-5">
-							<div class="case-studies-summary">
-								<span></span>
-								<h2></h2>
-							</div>
-						</a>
-					</li>
-
-
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3.jpeg); "> 
 						<a href="images/3.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -433,7 +425,17 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.jpg); "> 
+
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.jpeg); "> 
+						<a href="images/3.jpeg" class="color-5">
+							<div class="case-studies-summary">
+								<span></span>
+								<h2></h2>
+							</div>
+						</a>
+					</li>
+
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.jpeg); "> 
 						<a href="images/5.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -442,7 +444,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.jpeg); "> 
 						<a href="images/6.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -451,7 +453,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.jpeg); "> 
 						<a href="images/7.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -459,7 +461,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.jpeg); "> 
 						<a href="images/8.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -467,7 +469,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.jpeg); "> 
 						<a href="images/9.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -475,7 +477,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/10.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/10.jpeg); "> 
 						<a href="images/10.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -483,17 +485,8 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/11.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/11.jpeg); "> 
 						<a href="images/11.jpeg" class="color-5">
-							<div class="case-studies-summary">
-								<span></span>
-								<h2></h2>
-							</div>
-						</a>
-					</li>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/15.jpg); "> 
-						<a href="images/15.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
 								<h2></h2>
