--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 				<div class="col-md-12">
 				<ul id="fh5co-gallery-list"> 	
 				</li>
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpeg); ">
 					<a href="images/gallery-2.jpg" class="color-1">
 						<div class="case-studies-summary">
 							<span></span>
@@ -334,7 +334,7 @@
 						</div>
 					</a>
 				</li>
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpeg); ">
 					<a href="images/gallery-2.jpg" class="color-2">
 						<div class="case-studies-summary">
 							<span></span>
@@ -344,7 +344,7 @@
 				</li>
 
 
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpeg); ">
 					<a href="images/gallery-3.jpg" class="color-3">
 						<div class="case-studies-summary">
 							<span></span>
@@ -352,7 +352,7 @@
 						</div>
 					</a>
 				</li>
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpeg); ">
 					<a href="images/gallery-4.jpg" class="color-4">
 						<div class="case-studies-summary">
 							<span></span>
@@ -361,7 +361,7 @@
 					</a>
 				</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpeg); ">
 						<a href="images/gallery-5.jpg" class="color-3">
 							<div class="case-studies-summary">
 								<span></span>
@@ -369,7 +369,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpeg); ">
 						<a href="images/gallery-6.jpg" class="color-4">
 							<div class="case-studies-summary">
 								<span></span>
@@ -378,7 +378,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpeg); ">
 						<a href="images/gallery-7.jpg" class="color-4">
 							<div class="case-studies-summary">
 								<span></span>
@@ -387,7 +387,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpeg); "> 
 						<a href="images/gallery-8.jpg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -416,7 +416,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/12.jpeg); "> 
 						<a href="images/3.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
