--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 				<div class="col-md-12">
 				<ul id="fh5co-gallery-list"> 	
 				</li>
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpeg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
 					<a href="images/gallery-2.jpg" class="color-1">
 						<div class="case-studies-summary">
 							<span></span>
@@ -334,7 +334,7 @@
 						</div>
 					</a>
 				</li>
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpeg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
 					<a href="images/gallery-2.jpg" class="color-2">
 						<div class="case-studies-summary">
 							<span></span>
@@ -344,7 +344,7 @@
 				</li>
 
 
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpeg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
 					<a href="images/gallery-3.jpg" class="color-3">
 						<div class="case-studies-summary">
 							<span></span>
@@ -352,7 +352,7 @@
 						</div>
 					</a>
 				</li>
-				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpeg); ">
+				<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
 					<a href="images/gallery-4.jpg" class="color-4">
 						<div class="case-studies-summary">
 							<span></span>
@@ -361,7 +361,7 @@
 					</a>
 				</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpeg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
 						<a href="images/gallery-5.jpg" class="color-3">
 							<div class="case-studies-summary">
 								<span></span>
@@ -369,7 +369,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpeg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
 						<a href="images/gallery-6.jpg" class="color-4">
 							<div class="case-studies-summary">
 								<span></span>
@@ -387,7 +387,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
 						<a href="images/gallery-8.jpg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -396,7 +396,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.jpg); "> 
 						<a href="images/1.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -406,7 +406,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.jpg); "> 
 						<a href="images/2.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -416,7 +416,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/12.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/12.jpg); "> 
 						<a href="images/3.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -426,7 +426,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.jpg); "> 
 						<a href="images/3.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -435,7 +435,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.jpg); "> 
 						<a href="images/5.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -444,7 +444,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.jpg); "> 
 						<a href="images/6.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -453,7 +453,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.jpg); "> 
 						<a href="images/7.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -461,7 +461,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.jpg); "> 
 						<a href="images/8.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -469,7 +469,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.jpg); "> 
 						<a href="images/9.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -477,7 +477,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/10.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/10.jpg); "> 
 						<a href="images/10.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
@@ -485,7 +485,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/11.jpeg); "> 
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/11.jpg); "> 
 						<a href="images/11.jpeg" class="color-5">
 							<div class="case-studies-summary">
 								<span></span>
